# dkml-workflows-regular-example

./: .gitignore  .gitlab-ci.yml  DEVELOPING.md  README.md  dune  dune-project  your_example-maintain.opam  your_example.opam
.ci/dkml-compilers/gl/: setup-dkml.gitlab-ci.yml
.ci/dkml-compilers/pc/: setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
.github/workflows/: build.yml
.github/workflows/static/: mlc_config.json
ci/: build-test.sh  prepare-release.sh
